# minecraft-clone

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Gui.h  README.md  batch-renderer.sln  batch-renderer.vcxproj  batch-renderer.vcxproj.filters  build.bat  config.json  imgui.ini  minecraft-clone.sln  minecraft-clone.vcxproj  minecraft-clone.vcxproj.filters  premake5.lua
doc/html/: _block_8cpp.html  _block_8h.html  _block_8h_source.html  _camera_8cpp.html  _camera_8cpp.js  _camera_8h.html  _camera_8h_source.html  _chunk_8cpp.html  _chunk_8h.html  _chunk_8h.js  _chunk_8h_source.html  _config_8cpp.html  _config_8h.html  _config_8h_source.html  _gui_8cpp.html  _gui_8h.html  _gui_8h_source.html  _main_8cpp.html  _random_8cpp.html  _random_8h.html  _random_8h_source.html  _render_8cpp.html  _render_8h.html  _render_8h_source.html  _shader_8cpp.html  _shader_8h.html  _shader_8h_source.html  _texture_8cpp.html  _texture_8h.html  _texture_8h_source.html  _timer_8cpp.html  _timer_8h.html  _timer_8h_source.html  _tree_8cpp.html  _tree_8h.html  _tree_8h_source.html  _window_8cpp.html  _window_8h.html  _window_8h_source.html  _world_8cpp.html  (+96 more)
doc/latex/: _block_8cpp.tex  _block_8h.tex  _camera_8cpp.tex  _camera_8h.tex  _chunk_8cpp.tex  _chunk_8h.tex  (+51 more)
noise-map/: noise-map.sln  noise-map.vcxproj  noise-map.vcxproj.filters
proceduralGen/: imgui.ini  proceduralGen.sln  proceduralGen.vcxproj  proceduralGen.vcxproj.filters
shaders/: cube.frag  cube.vert  fragment.glsl  vertex.glsl
src/: Main.cpp  Shader.cpp  Shader.h  Window.h  glad.c
textures/: texture.txt
(+191 files in other folders)
